sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:14: error: not found: value i
    i=0
    ^AlgCombSort:16: error: not found: value i
    while(i + ecart < getNombreValeurs()){
          ^AlgCombSort:17: error: not found: value i
      if(plusPetit(i+ecart,i)){
                   ^AlgCombSort:17: error: not found: value i
      if(plusPetit(i+ecart,i)){
                           ^AlgCombSort:18: error: not found: value i
        echange(i, i+ecart);
                ^AlgCombSort:18: error: not found: value i
        echange(i, i+ecart);
                   ^AlgCombSort:19: error: not found: value i
        i = i +1;
        ^